--- a/styles.css
+++ b/styles.css
@@ -14,9 +14,10 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: calc(100vh);
+  height: calc(100vh - 150px);
   width: 100%;
   padding: 20px;
+  margin: auto;
 }
 
 #latest-number {
@@ -79,9 +80,9 @@ body {
 
 #history-grid {
   display: grid;
-  grid-template-columns: repeat(10, 75px);
-  grid-template-rows: repeat(8, 75px);
-  gap: 10px; /* 数字間のスペース */
+  grid-template-columns: repeat(10, 75px); /* グリッドの列サイズ指定 */
+  grid-template-rows: repeat(7, 75px); /* グリッドの行サイズ指定 */
+  gap: 10px;
 }
 
 .history-number {
