--- a/styles.css
+++ b/styles.css
@@ -80,8 +80,8 @@ body {
 
 #history-grid {
   display: grid;
-  grid-template-columns: repeat(10, 75px); /* グリッドの列サイズ指定 */
-  grid-template-rows: repeat(8, 75px); /* グリッドの行サイズ指定 */
+  grid-template-columns: repeat(10, 75px);
+  grid-template-rows: repeat(8, 75px);
   gap: 10px;
 }
 
@@ -119,4 +119,22 @@ body {
   border-radius: 10px;
   text-align: center;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+#edit-popup .popup-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#edit-popup label {
+  margin-bottom: 10px;
+}
+
+#edit-popup input[type="number"] {
+  margin-bottom: 20px;
+}
+
+#edit-popup button {
+  margin-top: 10px;
 }
