--- a/styles.css
+++ b/styles.css
@@ -95,7 +95,7 @@ body {
   font-weight: bold;
   background-color: #e3e3e3;
   border-radius: 5px;
-  border: 2px solid black;
+  border: 2px solid black;/
   cursor: pointer;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
@@ -132,9 +132,9 @@ body {
 }
 
 #edit-popup input[type="number"] {
-  margin-bottom: 20px;
+  margin-left: 10px;
 }
 
 #edit-popup button {
-  margin-top: 10px;
+  margin-left: 10px;
 }
