--- a/styles.css
+++ b/styles.css
@@ -111,6 +111,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 100;
 }
 
 .popup-content {
@@ -122,7 +123,7 @@ body {
 }
 
 #manual-popup .popup-content {
-  text-align: center;
+  z-index: 99;
 }
 
 #manual-popup label {
