--- a/styles.css
+++ b/styles.css
@@ -111,7 +111,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 99;
 }
 
 .popup-content {
@@ -120,10 +119,6 @@ body {
   border-radius: 10px;
   text-align: center;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-#manual-popup .popup-content {
-  z-index: 100;
 }
 
 #manual-popup label {
@@ -136,4 +131,14 @@ body {
 
 #manual-popup button {
   margin-left: 10px;
+}
+
+#manual-popup .popup-content {
+  z-index: 10;
+}
+
+#alert-popup .popup-content, 
+#edit-popup .popup-content,
+#reset-confirm-popup .popup-content {
+  z-index: 20;
 }
