--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ body {
   font-size: 390px; 
   font-weight: bold;
   border-radius: 10px;
-  background-color: #e3e3e3;
+  background-color: #ffffff;
   color: #fbcf87;
   /*border: 2px solid black;*/
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
